--- a/kurs_webpack/src/index.scss
+++ b/kurs_webpack/src/index.scss
@@ -2,8 +2,8 @@ body{
     h1{
     color: red;
     }
-    background: url("./proba.png");
-};
+    background: url("./assets/img/proba.png");
+}
 .autoprefixer {
     user-select: none;
 }
